添加登出，完善我的项目的添加，

--- a/front/css/index.css
+++ b/front/css/index.css
@@ -333,7 +333,15 @@ a {
   display: inline-block;
   margin-top: -3px;
   vertical-align: middle;
+  width: 150px;
+  min-height: 20px;
+}
+#loginBtnShell a {
+  color: #e0e0e0;
 }
 .project-introduction table {
   font-size: 15px;
+}
+#logout {
+  margin-left: 20px;
 }
