--- a/front/css/index.less
+++ b/front/css/index.less
@@ -388,10 +388,19 @@ a {
     display: inline-block;
     margin-top: -3px;
     vertical-align: middle;
+    width: 150px;
+    min-height: 20px;
+    a{
+        color: #e0e0e0;
+    }
 }
 
 .project-introduction {
     table {
         font-size: 15px;
     }
+}
+
+#logout{
+    margin-left: 20px;
 }
